--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -22,7 +22,7 @@
         });
       });
     </script>
-
+    
   </div>
   <div class="detail-card">
     <div class="card-left">
@@ -60,13 +60,12 @@
       <form action="{% url 'addbooking' car.id %}" method="POST">
         {% csrf_token %}
         {{ booking_form.as_p }}
-        {{ profile_form.as_p }}
+        <!-- {% if not user.profile.zipcode %} -->
+          {{ profile_form.as_p }}
+        <!-- {% endif %} -->
         <input type="submit" class="btn" value="Add booking">
-        <!-- new code above -->
-        <table class="striped">
       </form>
     </div>
-
 
   </div>
   <div class="card-action">
