--- a/main_app/templates/accounts/profile.html
+++ b/main_app/templates/accounts/profile.html
@@ -4,8 +4,8 @@
   <li>{{ user.first_name}}</li>
   <li>{{ user.last_name}}</li>
   <li>{{ user.email}}</li>
+  <li>{{ user.profile.phone}}</li>
   <li>{{ user.profile.address1}}</li>
-  <li>{{ user.profile.address2}}</li>
   <li>{{ user.profile.city}}</li>
   <li>{{ user.profile.state}}</li>
   <li>{{ user.profile.zipcode}}</li>
