--- a/main_app/templates/cars/detail.html
+++ b/main_app/templates/cars/detail.html
@@ -10,19 +10,8 @@
 
 <div class="card" style="max-width: 1000px;">
   <div class="card-header">
-    <input type="text" name="daterange" value="01/01/2018 - 01/15/2018" />
+    <input type="text" id="range" value="01/01/2018 - 01/15/2018" />
 
-    <script>
-
-      $(function () {
-        $('input[name="daterange"]').daterangepicker({
-          opens: 'left'
-        }, function (start, end, label) {
-          console.log("A new date selection was made: " + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD'));
-        });
-      });
-    </script>
-    
   </div>
   <div class="detail-card">
     <div class="card-left">
@@ -61,7 +50,7 @@
         {% csrf_token %}
         {{ booking_form.as_p }}
         {% if not user.profile.zipcode %}
-          {{ profile_form.as_p }}
+        {{ profile_form.as_p }}
         {% endif %}
         <input type="submit" class="btn" value="Add booking">
       </form>
@@ -107,12 +96,6 @@
 </div>
 
 <!-- Insert photo markup below this comment -->
-{% for photo in car.photo_set.all %}
-<img class="responsive-img card-panel" src="{{photo.url}}">
-{% empty %}
-<div class="card-panel teal-text center-align">No Photos Uploaded</div>
-{% endfor %}
-<!-- new code below -->
 <form action="{% url 'add_photo' car.id %}" enctype="multipart/form-data" method="POST" class="card-panel">
   {% csrf_token %}
   <input type="file" name="photo-file">
@@ -121,6 +104,7 @@
 </form>
 
 <script>
+
   var startDate = new Date();
   var nextDay = ''
   var start_dateEl = document.getElementById('id_start_date');
@@ -145,6 +129,7 @@
   var today = new Date();
   var tomorrow = new Date(today.getTime() + (24 * 60 * 60 * 1000));
   console.log(nextDay, 'nextDay!!')
+
 
   function here() {
     if (nextDay !== '') {
@@ -174,6 +159,25 @@
     }
   });
 
+  const d1 = new Date().setDate(today.getDate() + 5);
+  const d2 = new Date().setDate(today.getDate() + 7);
+  $('input[id="range"]').daterangepicker({
+    "autoApply": true,
+    "startDate": new Date(d1),
+    "endDate": new Date(d2),
+    "minDate": new Date(),
+    "maxDate": new Date(topMaxDate),
+
+
+    function(start, end, label) {
+      console.log('New date range selected: ' + start.format('YYYY-MM-DD') + ' to ' + end.format('YYYY-MM-DD') + ' (predefined range: ' + label + ')');
+    }
+  });
+  $('#daterange').on('cancel.daterangepicker', function chng() {
+    console.log('New date range selected')
+    // $('#daterange').val('');
+  });
+
   var oneDay = 1000 * 60 * 60 * 24;
   var dateDiff = ''
   var diffTime = ''
@@ -194,7 +198,5 @@
   var selectEl = document.getElementById('id_insurance');
   M.FormSelect.init(selectEl);
 </script>
-
-
 
 {% endblock %}
