--- a/main_app/templates/about.html
+++ b/main_app/templates/about.html
@@ -3,45 +3,48 @@
 {% load static %}
 
 <!-- Page Content -->
-    <div class="page-heading about-heading header-text" style="background-image: url(https://i.ibb.co/zhQ2yxY/2021-Cadillac-Escalade-17028-1.jpg);">
-      <div class="container">                         
-        <div class="row">
-          <div class="col-md-12">
-            <div class="text-content">
-              <h4>about us</h4>
-              <h2>our company</h2>
-            </div>
-          </div>
+<div class="page-heading about-heading header-text"
+  style="background-image: url(https://i.ibb.co/zhQ2yxY/2021-Cadillac-Escalade-17028-1.jpg);">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-12">
+        <div class="text-content">
+          <h4>about us</h4>
+          <h2>our company</h2>
         </div>
       </div>
     </div>
-    <div class="text-content">
-              <h4>about  usabout  usabout  us</h4>
-              <h2>our company</h2>
-            </div>
-            <div class="text-content">
-              <h4>about us</h4>
-              <h2>our company</h2>
-            </div>
-            <div class="text-content">
-              <h4>about us</h4>
-              <h2>our company</h2>
-            </div>
-            <div class="text-content">
-              <h4>about us</h4>
-              <h2>our company</h2>
-            </div>
-            <div class="text-content">
-              <h4>about us</h4>
-              <h2>our company</h2>
-            </div>
-            <div class="text-content">
-              <h4>about us</h4>
-              <h2>our company</h2>
-            </div>
-            <div class="text-content">
-              <h4>about us</h4>
-              <h2>our companyour companyour companyour company</h2>
-            </div>
+  </div>
+</div>
+<div class="container">
+  <div class="text-content">
+    <h4>about usabout usabout us</h4>
+    <h2>our company</h2>
+  </div>
+  <div class="text-content">
+    <h4>about us</h4>
+    <h2>our company</h2>
+  </div>
+  <div class="text-content">
+    <h4>about us</h4>
+    <h2>our company</h2>
+  </div>
+  <div class="text-content">
+    <h4>about us</h4>
+    <h2>our company</h2>
+  </div>
+  <div class="text-content">
+    <h4>about us</h4>
+    <h2>our company</h2>
+  </div>
+  <div class="text-content">
+    <h4>about us</h4>
+    <h2>our company</h2>
+  </div>
+  <div class="text-content">
+    <h4>about us</h4>
+    <h2>our companyour companyour companyour company</h2>
+  </div>
+</div>
 
 {% endblock %}
