--- a/main_app/templates/cars/index.html
+++ b/main_app/templates/cars/index.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
 {% load static %}
-
+<div class="container">
 <h1>Car List</h1>
 
 {% for car in cars %}
@@ -23,4 +23,5 @@
 </div>
 {% endfor %}
 
+</div>
 {% endblock %}
