--- a/main_app/templates/home.html
+++ b/main_app/templates/home.html
@@ -5,26 +5,16 @@
 
 <!-- Page Content -->
     <!-- Banner Starts Here -->
+    
     <div class="banner header-text">
       <div class="owl-banner owl-carousel">
         <div class="banner-item-01">
           <div class="text-content">
-            <h4>Find your car today!</h4>
-            <h2>Lorem ipsum dolor sit amet</h2>
+            <h4>Your GREEN option for car rentals</h4>
+            <h2>We are here for you!</h2>
           </div>
         </div>
-        <div class="banner-item-02">
-          <div class="text-content">
-            <h4>Fugiat Aspernatur</h4>
-            <h2>Laboriosam reprehenderit ducimus</h2>
-          </div>
-        </div>
-        <div class="banner-item-03">
-          <div class="text-content">
-            <h4>Saepe Omnis</h4>
-            <h2>Quaerat suscipit unde minus dicta</h2>
-          </div>
-        </div>
+        
       </div>
     </div>
     <!-- Banner Ends Here -->
@@ -103,7 +93,7 @@
       </div>
     </div>
 
-    <div class="services" style="background-image: url({% static 'images/other-image-fullscren-1-1920x900.jpg' %});" >
+    <div class="services" style="background-image: url({% static 'images/other-image-fullscren-1-1920x900.jpg' %})">
       <div class="container">
         <div class="row">
           <div class="col-md-12">
