--- a/main_app/templates/base.html
+++ b/main_app/templates/base.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="assets/images/favicon.ico">
+    <link rel="icon" href="{% static 'images/favicon.ico' %}">
     <link href="https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900&display=swap" rel="stylesheet">
 
     <title>ElectriCars | Electric Cars Rental Co.</title>
@@ -44,6 +44,9 @@
     <link rel="stylesheet" type="text/css" href="{% static 'css/owl.css' %}">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
     
+    <!-- Bootstrap JS script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
   </head>
   
   <body>
@@ -67,8 +70,8 @@
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarResponsive">
-            <ul class="navbar-nav ml-auto">
-              <li class="nav-item active">
+            <ul class="navbar-nav ml-auto" id="mynav">
+              <li class="nav-item">
                 <a class="nav-link" href="{% url 'home' %}">Home
                   <span class="sr-only">(current)</span>
                 </a>
@@ -80,11 +83,11 @@
               <li class="nav-item"><a class="nav-link" href="{% url 'about' %}">About Us</a></li>
               {% comment %} <li class="nav-item"><a class="nav-link" href="{% url 'contact' %}">Contact Us</a></li> {% endcomment %}
               {% if user.is_authenticated %}
-              {% comment %} <li><a href="{% url 'profile' %}">My Account</a></li> {% endcomment %}
-              <li class="nav-item"><a class="nav-link" href="{% url 'logout' %}">Log Out</a></li>
+              <li class="nav-item"><a class="nav-link" href="{% url 'account' %}">My Account</a></li>
+              <li class="nav-item"><a class="nav-link active" href="{% url 'logout' %}">Log Out</a></li>
               {% else %}
-              <li class="nav-item"><a class="nav-link" href="{% url 'signup' %}">Sign Up</a></li>
-              <li class="nav-item"><a class="nav-link" href="{% url 'login' %}">Log In</a></li>
+              <li class="nav-item"><a class="nav-link active" href="{% url 'signup' %}">Sign Up</a></li>
+              <li class="nav-item"><a class="nav-link active" href="{% url 'login' %}">Log In</a></li>
               {% endif %}
             </ul>
           </div>
@@ -96,9 +99,6 @@
       {% block content %}
       {% endblock %}
     </main>
-    
-    
-    
     
     <footer class="bg-dark text-center text-white">
       <!-- Grid container -->
@@ -155,13 +155,11 @@
           </div>
           <!-- Copyright -->
         </footer>
-      
-        
+
         <!-- Bootstrap core JavaScript -->
         <script src="{% static 'jquery/jquery.min.js' %}"></script>
         <script src="{% static 'bootstrap/js/bootstrap.bundle.min.js' %}"></script>
-        
-        
+
         <!-- Additional Scripts -->
         <script src="{% static 'js/custom.js' %}"></script>
         <script src="{% static 'js/owl.js' %}"></script>
