--- a/main_app/templates/registration/signup.html
+++ b/main_app/templates/registration/signup.html
@@ -1,16 +1,16 @@
 {% extends 'base.html' %}
 {% block content %}
+<div class="container forms">
+  <h1>Sign Up</h1>
 
-<h1>Sign Up</h1>
-
-{% if error_message %}
+  {% if error_message %}
   <p class="red-text">{{ error_message }}</p>
-{% endif %}
+  {% endif %}
 
-<form method="post" action="{% url 'signup' %}">
-  {% csrf_token %}
-  {{ form.as_p }}
-  <input type="submit" class="btn" value="signup">
-</form>
-
+  <form method="post" action="{% url 'signup' %}">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <input type="submit" class="btn" value="signup">
+  </form>
+</div>
 {% endblock %}
